@@ -2,4 +2,10 @@
 
 A game similar to Breakout where a paddle follows the players mouse and the goal is to hit all of the animals with the ball.
 
+## Compiling
+ `javac --module-path "<path to>/javafx-sdk-11.0.1/lib" --add-modules javafx.controls,javafx.fxml *.java`
+ 
+## Running
+`java --module-path "<path to>/javafx-sdk-11.0.1/lib" --add-modules javafx.controls,javafx.fxml GameApp`
+
 ![image](https://user-images.githubusercontent.com/32044950/120028179-5d9c0a00-bfc2-11eb-8609-2c46bc5e7861.png)
